--- a/values.yaml
+++ b/values.yaml
@@ -3,7 +3,7 @@ namespace: cattle-system
 ingress:
   hosts:
     - name: k8s.carstens.tech
-  secret: tls-rancher
+  secret: tls-rancher-ingress
   issuer: letsencrypt-issuer
   name: rancher
 
