--- a/templates/external-secret.yaml
+++ b/templates/external-secret.yaml
@@ -4,7 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: {{ .name }}
-  namespace: {{ .namespace | default $.Values.namespace | default $.Release.Namespace  }}
+  namespace: {{ $.Values.github.namespace  }}
 spec:
   refreshInterval: {{ default .refreshInterval "1h0m0s" }}
   secretStoreRef:
